[package]
name = "nt10-boot-uefi"
version = "0.0.0"
edition.workspace = true
description = "UEFI ZBM10 boot manager for ZirconOSFluent NT10 (see ideas/ZirconOS_NT10_Architecture.md §5)"
license.workspace = true
repository.workspace = true
autobins = false

[lib]
crate-type = ["lib"]

[[bin]]
name = "zbm10"
path = "src/main.rs"
test = false
bench = false

[dependencies]
nt10-boot-protocol = { path = "../nt10-boot-protocol" }
r-efi = { path = "../../references/r-efi", default-features = false, features = ["native"] }
