[package]
name = "nt10-kernel-bin"
version = "0.0.0"
edition.workspace = true
description = "ZirconOSFluent NT10 kernel ELF (low physical entry) for QEMU -kernel smoke tests"
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "nt10-kernel-bin"
path = "src/main.rs"
test = false
bench = false

[features]
default = []
# Declarative flag for docs/tooling; link layout is always 1 MiB physical (link/x86_64-uefi-load.ld).
uefi-esp = []

[dependencies]
nt10-kernel = { path = "../nt10-kernel" }
