[package]
name = "nt10-kernel"
version = "0.0.0"
edition.workspace = true
description = "ZirconOS NT10 kernel library (no_std), layout per ideas/ZirconOS_NT10_Architecture.md §4"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
nt10-boot-protocol = { path = "../nt10-boot-protocol" }

[build-dependencies]
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
