[package]
name = "nt10-kernel"
version = "0.0.0"
edition.workspace = true
description = "ZirconOSFluent NT10 kernel library (no_std), layout per ideas/ZirconOS_NT10_Architecture.md §4"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
## Optional pool alloc/free counters for diagnostics (`crate::mm::pool::pool_stats_snapshot`).
mm-pool-stats = []
## Tag histogram buckets `tag % 8` (`crate::mm::pool::pool_tag_buckets_snapshot`).
mm-pool-tag-hist = []
## Extra serial checkpoints in `kmain` (enable on `nt10-kernel-bin` when debugging bring-up).
kernel-infra-selftest = []

[dependencies]
nt10-boot-protocol = { path = "../nt10-boot-protocol" }

[build-dependencies]
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
